cmake_minimum_required(VERSION 3.26)
project(ObjektnoOrientiranoProgramiranje)

set(CMAKE_CXX_STANDARD 17)

add_executable(Exercise1 Exercises/Exercise1.cpp)
add_executable(Exercise2 Exercises/Exercise2.cpp)
add_executable(Exercise3 Exercises/Exercise3.cpp)
add_executable(Exercise4 Exercises/Exercise4.cpp)
add_executable(Exercise5 Exercises/Exercise5.cpp)
add_executable(Exercise6 Exercises/Exercise6.cpp)
add_executable(Exercise7 Exercises/Exercise7.cpp)
add_executable(Exercise8 Exercises/Exercise8.cpp)
